--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-frontend/node_modules
-frontend/dist
-build
+/frontend/node_modules
+/frontend/dist
+/build
 wails-study-res.syso
 wails-study.exe.manifest
 wails-study.ico
